@@ -11,7 +11,6 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import net.dv8tion.jda.api.entities.Message;
 import net.dv8tion.jda.api.entities.MessageEmbed;
@@ -106,7 +105,7 @@ public class HowWeBecameCursedService extends BaseService implements DailyTickab
                 .stream()
                 .sorted(Comparator.comparing(HowWeBecameCursedEntity::getTimeCreated))
                 .map(HowWeBecameCursedEntity::getMessage)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private String getMessageContent(Message message) {
